--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navegacion">
             <ul>
                 <li><i class="fa-solid fa-house"></i> Inicio</li>
-                <li><i class="fa-solid fa-cross"></i> Historia</li>
+                <li><i class="fa-solid fa-book"></i> Historia</li>
                 <li><i class="fa-solid fa-envelope"></i> Contacto</li>
                 <li><i class="fa-brands fa-facebook facebook"></i></li>
             </ul>
@@ -29,86 +29,129 @@
     <!-- Contenedor -->
     <div class="contenedor">
         <div class="contenedor-imagen">
-            <h2><i>Pastoral Universitaria</i></h2>
+            <h1><i>Pastoral Universitaria</i></h1>
+            <img src="assets/logo-une-1.png" alt="logo une">
         </div>
     </div>
     <!-- Atencion -->
     <div class="atencion">
-        <div class="atencion__item">
-            <p>Horario de atención virtual del Capellán</p>
-            <p>P. Ronny Ayala Rojas </p>
-            <p><i class="fa-solid fa-phone"></i>984101124</p>
-            <p>Consejería Espiritual</p>
-            <ul>
-                <li>Martes, jueves y viernes<br>9:00 a.m. - 12:00 m.</li>
-                <li>Martes, Miércoles y jueves<br>9:00 - 11:00 p.m.</li>
-            </ul>
-        </div>
-        <div class="atencion__item">
-            <p>Equipo de Consejería Espiritual</p>
-            <div class="item">
-                <p>P.Reynaldo Carrión Lázaro</p>
-                <p><i class="fa-solid fa-phone"></i><a href="tel:+51942364575">942364575</a></p>
-                <p>Jueves 11:30 a.m. - 1:00 p.m.</p>
+        <div class="contenedor__atencion">
+            <div class="atencion__item">
+                <p>
+                    Horario de atención virtual del Capellán
+                    <span>P. Ronny Ayala Rojas</span>
+                </p>
+                <a href="tel:+51942364575"><i class="fa-solid fa-phone"></i>984101124</a>
+                <p>
+                    <span>Consejería Espiritual</span>
+                </p>
+                <ul>
+                    <li>Martes, jueves y viernes<br>9:00 a.m. - 12:00 m.</li>
+                    <li>Martes, Miércoles y jueves<br>9:00 - 11:00 p.m.</li>
+                </ul>
             </div>
-            <div class="item">
-                <p>Hna. Camen Flores Montero</p>
-                <p><i class="fa-solid fa-phone"></i>981658587</p>
-                <p>Miércoles 4:00 - 5:30 p.m.</p>
-            </div>
-            <div class="item">
-                <p>P. Raúl Angeles Cabrera</p>
-                <p><i class="fa-solid fa-phone"></i>993409494</p>
-                <p>Previa cita</p>
+            <div class="atencion__item">
+                <p>
+                    <span>Equipo de Consejería Espiritual</span>
+                </p>
+                <div class="item">
+                    <p>P. Reynaldo Carrión Lázaro</p>
+                    <a href="tel:+51942364575"><i class="fa-solid fa-phone"></i>942364575</a>
+                    <p class="item-fecha">Jueves 11:30 a.m. - 1:00 p.m.</p>
+                </div>
+                <div class="item">
+                    <p>Hna. Camen Flores Montero</p>
+                    <a href="tel:+51942364575"><i class="fa-solid fa-phone"></i>981658587</a>
+                    <p class="item-fecha">Miércoles 4:00 - 5:30 p.m.</p>
+                </div>
+                <div class="item">
+                    <p>P. Raúl Angeles Cabrera</p>
+                    <a href="tel:+51942364575"><i class="fa-solid fa-phone"></i>993409494</a>
+                    <p class="item-fecha">Previa cita</p>
+                </div>
             </div>
         </div>
     </div>
     <!-- Main -->
     <main class="main">
         <div class="actividad">
-            <h2>Actividades</h2>
-            <h3>ALIMENTAR LA ESPIRITUALIDAD CRISTIANA</h3>
-            <p>Ofreciendo Mpreparación para los sacramentos de Bautismo, Primera Comunión, Confirmación y Matrimonio.</p>
-            <p>Favoreciendo momentos de oración, adoración, jornadas y retiros espirituales.</p>
-            <p>Ofreciendo la recepción de los sacramentos de la Confesión y Comunión.</p>
-            <h3>PROMOVER Y FORTALECER NUESTRA IDENTIDAD Y COMPROMISO EN LA IGLESIA</h3>
-            <p>Cuidar nuestro testimonio coherente de vida cristiana.</p>
-            <p>Brindando cursos de formación cristiana.</p>
-            <p>Favoreciendo respuestas solidarias a las necesidades de la sociedad.</p>
-            <h3>BRINDAR LA COMPAÑÍA DE AMIGOS, CATEQUISTAS Y CONSEJEROS</h3>
-            <p>Ofreciendo acompañamiento psico-emocional.</p>
-            <p>Alentando el acompañamiento espiritual.</p>
-            <p>Estimulando la vida deportiva y fraterna.</p>
-            <p>Escuchando, animando y alentando los proyectos de cada uno.</p>
+            <div class="contenido-actividad">
+                <h2>Actividades</h2>
+                <h3>ALIMENTAR LA ESPIRITUALIDAD CRISTIANA</h3>
+                <p>
+                    Ofreciendo Mpreparación para los sacramentos de Bautismo, Primera Comunión, Confirmación y Matrimonio.
+                </p>
+                <p>
+                    Favoreciendo momentos de oración, adoración, jornadas y retiros espirituales.
+                </p>
+                <p>
+                    Ofreciendo la recepción de los sacramentos de la Confesión y Comunión.
+                </p>
+                <h3>PROMOVER Y FORTALECER NUESTRA IDENTIDAD Y COMPROMISO EN LA IGLESIA</h3>
+                <p>
+                    Cuidar nuestro testimonio coherente de vida cristiana.
+                </p>
+                <p>
+                    Brindando cursos de formación cristiana.
+                </p>
+                <p>
+                    Favoreciendo respuestas solidarias a las necesidades de la sociedad.
+                </p>
+                <h3>BRINDAR LA COMPAÑÍA DE AMIGOS, CATEQUISTAS Y CONSEJEROS</h3>
+                <p>
+                    Ofreciendo acompañamiento psico-emocional.
+                </p>
+                <p>
+                    Alentando el acompañamiento espiritual.
+                </p>
+                <p>
+                    Estimulando la vida deportiva y fraterna.
+                </p>
+                <p>
+                    Escuchando, animando y alentando los proyectos de cada uno.
+                </p>
+            </div>
         </div>
         <div class="historia">
-            <h2>Historia</h2>
-            <img src="assets/iglesia.jpg" alt="iglesia">
-            <button class="button">ACTIVIDADES 2017-2020</button>
-            <img src="assets/banner-catequista.jpeg" alt="Banner catequista">
+            <div class="contenido-historia">
+                <h2>Historia</h2>
+                <img src="assets/iglesia.jpg" alt="iglesia">
+                <button class="button">ACTIVIDADES 2017-2020</button>
+                <img src="assets/banner-catequista.jpeg" alt="Banner catequista">
+            </div>
         </div>
         <div class="perfil">
-            <h2>Perfil del Capellán</h2>
-            <img src="assets/capellas-une.jpg" alt="capellan">
-            <p>P. Ronny Ayala Rojas, sacerdote salesiano, es el Capellán de la Universidad Nacional de Educación Enrique Guzmán y Valle, cuenta con un equipo educativo-pastoral para desarrollar las propuestas formativas, espirituales, de integración y compromiso con la sociedad.</p>
-            <p>Entre otras tareas llevaremos adelante un Proyecto de Acompañamiento Pastoral de la Universidad, anhelando contar con la mayor participación de los integrantes de la comunidad universitaria con la finalidad de llegar a todos.</p>
+            <div class="contenido-perfil">
+                <h2>Perfil del Capellán</h2>
+                <img src="assets/capellas-une.jpg" alt="capellan">
+                <p>
+                    P. Ronny Ayala Rojas, sacerdote salesiano, es el Capellán de la Universidad Nacional de Educación Enrique Guzmán y Valle, cuenta con un equipo educativo-pastoral para desarrollar las propuestas formativas, espirituales, de integración y compromiso con la sociedad.
+                </p>
+                <p>
+                    Entre otras tareas llevaremos adelante un Proyecto de Acompañamiento Pastoral de la Universidad, anhelando contar con la mayor participación de los integrantes de la comunidad universitaria con la finalidad de llegar a todos.
+                </p>
+            </div>
         </div>
     </main>
     <!-- Avisos -->
     <div class="avisos">
-        <h2>Avisos</h2>
-        <img src="assets/rezo-marzo.jpeg" alt="rezo"><br>
-        <img src="assets/via-crucis.jpeg" alt="via crucis"><br>
-        <img src="assets/concurso-canto.jpeg" alt="Concurso de canto navideño"><br>
-        <p>Rezo del Rosario - Pastoral UNE</p>
-        <p>Mes de marzo · 6:00 pm</p>
-        <p>Información para unirse a Google Meet</p>
-        <p>Enlace a la videollamada:</p>
-        <a href="https://meet.google.com/isc-qmpx-sga" target="_blank"><i class="fa-brands fa-google"></i>https://meet.google.com/isc-qmpx-sga</a>
+        <div class="contenedor-avisos">
+            <h2>Avisos</h2>
+            <img src="assets/rezo-marzo.jpeg" alt="rezo"><br>
+            <img src="assets/via-crucis.jpeg" alt="via crucis"><br>
+            <img src="assets/concurso-canto.jpeg" alt="Concurso de canto navideño"><br>
+            <div class="contenedor-avisos-info">
+                <p>Rezo del Rosario - Pastoral UNE</p>
+                <p>Mes de marzo · 6:00 pm</p>
+                <p>Información para unirse a Google Meet</p>
+                <p>Enlace a la videollamada:</p>
+                <a href="https://meet.google.com/isc-qmpx-sga" target="_blank"><i class="fa-brands fa-google"></i>oogle Meet (Link)</a>
+            </div>
+        </div>
     </div>
     <!-- Footer -->
     <footer class="footer">
-        <p>Pastoral Universitaria de la UNE:</p>
+        <p>Pastoral Universitaria de la UNE &copy;</p>
     </footer>
 </body>
 </html>
